--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 								<a class="nav-link" data-toggle="tab" href="#tab3">MY SKILLS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" data-toggle="tab"  href="../resume.pdf" target="popup">Download CV</a>
+								<a class="nav-link" data-toggle="tab"  href="https://henriklein.de/resume.pdf">Download CV</a>
 							</li>
 						</ul>
 
