--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     	<div class="section section-home" id="HOME">
     		<div class="container">
     			<div class="hero-content text-center">
-	    			<span class="hello mb-4 d-block">Hey you <img src="assets/images/waving-hand.png"></span>
+	    			<span class="hello mb-4 d-block">Hey you <img src="assets/images/waving-hand.png" alt="downloading image"></span>
 	    			<h1>I’m <span>Henri Klein,</span></h1>
 
 	    			<div id="autoplay" class="my-4">
@@ -229,7 +229,7 @@
 								<a class="nav-link" data-toggle="tab" href="#tab3">MY SKILLS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" data-toggle="tab"  href="https://henriklein.de/resume.pdf">Download CV</a>
+								<a class="nav-link" href="https://henriklein.de/resume.pdf">Download CV</a>
 							</li>
 						</ul>
 
