--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 										</li>
 										<li>
 											<span>04</span>
-											<a href="#RESUME">Testemonials</a>
+											<a href="#TESTEMONIALS">Testemonials</a>
 										</li>
 										<li>
 											<span>05</span>
-											<a href="#PORTFOLIO">Contact</a>
+											<a href="#CONTACT">Contact</a>
 										</li>
 										
 									</ul>
@@ -506,7 +506,7 @@
 		<!-- END: PORTFOLIO -->
 
 		<!-- START: TESTIMONY -->
-		<div class="section" id="TESTIMONY">
+		<div class="section" id="TESTEMONIALS">
 			<div class="container">
 				<div class="section-head text-center">
 					<span>Kind Words</span>
@@ -566,7 +566,7 @@
 					<div class="col-md-4">
 						<div class="section-head">
 							<span>say Hello</span>
-							<h2>Contact </h2>
+							<h2>Schedule a meeting </h2>
 						</div>
 					</div>
 
@@ -579,10 +579,10 @@
 									<div class="about-desc-info">
 										<div class="about-desc-info-content d-flex align-items-center hover-state b-box">
 											<div class="about-desc-icon">
-												<i class="lni-mobile"></i>
+												<i class="lni-linkedin"></i>
 											</div>
 											<div class="about-desc-info-desc">
-												<a href="tel:9876543210" class="">+49 160 5812203</a>
+												<a href="https://linkedin.com/in/henriklein" class="">in/henriklein</a>
 											</div>
 										</div>
 									</div>
@@ -603,41 +603,10 @@
 							</div>
 						</div>
 						<div class="contact-form mt-4">
-							<form method="post" action="php/contact.php" name="contact-form" id="contactForm">
-								<h5 class="section-subHead mb-4"> Contact Form</h5>
-								<div id="formMessage" style="display: none;"><h3>Email Sending</h3></div>
-								<div class="row">
-									<div class="col-lg-6">
-										<div class="form-group mb-3">
-											<input name="name" id="name" type="text" class="form-control b-box" placeholder="Your Name *" required>
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="form-group mb-3">
-											<input name="email" id="email" type="email" class="form-control b-box" placeholder="Your Email *" required>
-										</div>
-									</div>                                
-								</div>
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="form-group mb-3">
-											<input type="text" class="form-control b-box" id="subject" placeholder="Your Subject.." required>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="form-group mb-3">
-											<textarea name="comments" id="comments" rows="4" class="form-control b-box" placeholder="Your message..."></textarea>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-lg-12 mt-4 mb-5">
-										<input type="submit" id="submit" name="send" class="submitBnt btn btn-outline text-uppercase" value="Submit">
-									</div>
-								</div>
-							</form>
+							<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/henriklein/meetup?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width: 320px; height: 500px; /* [disabled]margin-top: 10px; */"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+<!-- Calendly inline widget end -->
 						</div>
 					</div>
 				</div>
