--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
 						</div>
 
 						<div class="portfolio-item swiper-slide video" data-groups="all video">
-							<a href="assets/images/VDVIci.png" class="portfolio-item--content simple-ajax-popup">
+							<a href="assets/images/vdwiki.png" class="portfolio-item--content simple-ajax-popup">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/VDVici.png" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/vdwiki.png" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
