--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 									<span>01</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Graphic Design</h5>
+									<h5 class="mb-0">connect</h5>
 								</div>
 							</div>
 						</div>
@@ -236,7 +236,7 @@
 									<span>02</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Web Development</h5>
+									<h5 class="mb-0">DocÜberall</h5>
 								</div>
 							</div>
 						</div>
@@ -249,7 +249,7 @@
 									<span>03</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Media Marketing</h5>
+									<h5 class="mb-0">Seren.ity</h5>
 								</div>
 							</div>
 						</div>
@@ -262,7 +262,7 @@
 									<span>04</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Advetising</h5>
+									<h5 class="mb-0">Pathcheck</h5>
 								</div>
 							</div>
 						</div>
@@ -275,7 +275,7 @@
 									<span>05</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Game Development</h5>
+									<h5 class="mb-0">dectectiveAI</h5>
 								</div>
 							</div>
 						</div>
