--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			<div class="container">
 				<div class="section-head text-center">
 					<span>WHAT I DO</span>
-					<h2>Former Projects</h2>
+					<h2>latest Projects</h2>
 				</div>
 
 				<div class="row mt-4">
@@ -262,7 +262,7 @@
 									<span>04</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Pathcheck</h5>
+									<h5 class="mb-0">ARChat</h5>
 								</div>
 							</div>
 						</div>
@@ -275,7 +275,7 @@
 									<span>05</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">dectectiveAI</h5>
+									<h5 class="mb-0">Pathcheck</h5>
 								</div>
 							</div>
 						</div>
@@ -288,7 +288,7 @@
 									<span>06</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0">Analytics</h5>
+									<h5 class="mb-0">DetectiveAI</h5>
 								</div>
 							</div>
 						</div>
