--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 	    			<h1>I’m <span>Henri Klein,</span></h1>
 
 	    			<div id="autoplay" class="my-4">
+					   <span>Student, that loves to create</span>
 					   <span>UI designer and Developer</span>
-					   <span>Future mobility researcher</span>
-					   <span>Somebody down to philosophize</span>
+					   <span>currently building connect</span>
+					   <span>researching Argumented Reality</span>
+					   <span>somebody always happy to debate</span>
 					</div>   
 
  	   			</div>
