--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 					   <span>UI designer and Developer</span>
 					   <span>currently building connect</span>
 					   <span>researching Argumented Reality</span>
-					   <span>somebody always happy to debate</span>
+					   <span>always happy to debate</span>
+					   <span>👇 scroll down for more 👇</span>
+					   <span>Or just watch this super \n aweseome animation once mroe 🙃</span>
 					</div>   
 
  	   			</div>
