--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 					   <span>Student, that loves to create</span>
 					   <span>UI designer and Developer</span>
 					   <span>currently building connect</span>
-					   <span>researching Argumented Reality</span>
+					   <span>researching usecases of AR</span>
 					   <span>always happy to debate</span>
 					   <span>👇 scroll down for more 👇</span>
-					   <span>Or just watch this super \n aweseome animation once mroe 🙃</span>
+					   <span>/span>
 					</div>   
 
  	   			</div>
