--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ var ml_account = ml('accounts', '2425592', 'f7m7d4r1b4', 'load');
 												<div>
 													<h5>The Knowledge Society</h5>
 													<h6 class="badge badge-light d-inline-block my-3">2020-2021</h6>
-													<p>Collaborate with creative and development teams on the execution of ideas.</p>
+													<p>10 month global accelerator to learn exponential technology and how to solve the world's biggest problems</p>
 												</div>
 											</div>
 										</div>
