--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ var ml_account = ml('accounts', '2425592', 'f7m7d4r1b4', 'load');
 									<span>01</span>
 								</div>
 								<div class="services-list-desc">
-									<h5 class="mb-0"><a href="https://connect.limited">connect</a></h5>
+									<h5 class="mb-0"><a href="https://c0nnect.web.app">connect</a></h5>
 								
 								</div>
 							</div>
